--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Spring Security Example</title>
+    <meta charset="UTF-8">
+    <title>Управление пользователями</title>
 </head>
 <body>
-<h1>Welcome to Index PAGE!</h1>
-
-
+<div th:if="${getUsers}">
+    <h2>Список пользователей:</h2>
+    <div th:each="user : ${getUsers}">
+        <p th:text="'User ID: ' + ${user.getId()} + ', First name: ' + ${user.getFirstName()} + ', Last name: '
+        + ${user.getLastName()} + ', E-mail: ' + ${user.getEmail()}">List of Users</p>
+    </div>
+    <br/>
+    <a th:href="@{/deleteuser}">Удалить пользователя</a>
+    <br/>
+    <br/>
+    <a th:href="@{/newuser}">Создать пользователя</a>
+    <br/>
+    <br/>
+    <a th:href="@{/edituser}">Отредактировать пользователя</a>
+</div>
 </body>
 </html>
