some changes to the project. The models User and Role should be ok

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
     <title>Управление пользователями</title>
 </head>
 <body>
+<h2>Please LogIn to access the Application</h2>
 <div th:if="${getUsers}">
     <h2>Список пользователей:</h2>
     <div th:each="user : ${getUsers}">
