--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -14,5 +14,21 @@
             <a href="/<c:url value=/logout" />" > Logout</a></h2> //??????????????
     </c:if>
 </div>
+<div th:if="${getUsers}">
+    <h2>?????? ?????????????:</h2>
+    <div th:each="user : ${getUsers}">
+        <p th:text="'User ID: ' + ${user.getId()} + ', First name: ' + ${user.getFirstName()} + ', Last name: '
+        + ${user.getLastName()} + ', E-mail: ' + ${user.getEmail()}">List of Users</p>
+    </div>
+    <br/>
+    <a th:href="@{/deleteuser}">??????? ????????????</a>
+    <br/>
+    <br/>
+    <a th:href="@{/newuser}">??????? ????????????</a>
+    <br/>
+    <br/>
+    <a th:href="@{/edituser}">??????????????? ????????????</a>
+</div>
+
 </body>
 </html>
