--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,24 +2,9 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Управление пользователями</title>
+    <title>The index page</title>
 </head>
 <body>
-<h2>Please LogIn to access the Application</h2>
-<div th:if="${getUsers}">
-    <h2>Список пользователей:</h2>
-    <div th:each="user : ${getUsers}">
-        <p th:text="'User ID: ' + ${user.getId()} + ', First name: ' + ${user.getFirstName()} + ', Last name: '
-        + ${user.getLastName()} + ', E-mail: ' + ${user.getEmail()}">List of Users</p>
-    </div>
-    <br/>
-    <a th:href="@{/deleteuser}">Удалить пользователя</a>
-    <br/>
-    <br/>
-    <a th:href="@{/newuser}">Создать пользователя</a>
-    <br/>
-    <br/>
-    <a th:href="@{/edituser}">Отредактировать пользователя</a>
-</div>
+    <h2>Please <a href="http://localhost:8080/login">sign in</a> to access the PP313 project</h2>
 </body>
 </html>
