--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -32,7 +32,7 @@
         <p>
             <input type="checkbox" id="remember-me" name="remember-me" class="form-control">Remember me
         </p>
-<!--        <input name="_csrf" type="hidden" value="a20cbbb2-aed6-4040-8859-84d26f675f2c" />-->
+<!--        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
     </form>
 </div>
