--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,6 +5,7 @@
     <title>The index page</title>
 </head>
 <body>
+<h1>Index page</h1>>
     <h2>Please <a href="http://localhost:8080/login">sign in</a> to access the PP313 project</h2>
 </body>
 </html>
