--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -1,36 +1,51 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
-<html xmlns:c="http://www.w3.org/1999/XSL/Transform">
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-    <title>Admin page</title>
+    <meta charset="UTF-8">
+    <title>Admin's page</title>
 </head>
 <body>
-    <h2>Admin information:</h2>
-
-<!--<div align="center">-->
-<!--    <h1>${title}</h1>-->
-<!--    <h2>${message}</h2>-->
-<!--    <c:if test="${pageContext.request.userPrincipal.name != null}">-->
-<!--        <h2>Welcome : ${pageContext.request.userPrincipal.name} |-->
-<!--            <a href="/<c:url value=/logout" />" > Logout</a></h2> //??????????????-->
-<!--    </c:if>-->
-<!--</div>-->
-<!--<div th:if="${getUsers}">-->
-<!--    <h2>?????? ?????????????:</h2>-->
-<!--    <div th:each="user : ${getUsers}">-->
-<!--        <p th:text="'User ID: ' + ${user.getId()} + ', First name: ' + ${user.getFirstName()} + ', Last name: '-->
-<!--        + ${user.getLastName()} + ', E-mail: ' + ${user.getEmail()}">List of Users</p>-->
-<!--    </div>-->
-<!--    <br/>-->
-<!--    <a th:href="@{/deleteuser}">??????? ????????????</a>-->
-<!--    <br/>-->
-<!--    <br/>-->
-<!--    <a th:href="@{/newuser}">??????? ????????????</a>-->
-<!--    <br/>-->
-<!--    <br/>-->
-<!--    <a th:href="@{/edituser}">??????????????? ????????????</a>-->
-<!--</div>-->
-
+    <h2>Admin's information:</h2>
+    <br/>
+    <div th:if="${admin}">
+        <p th:text="'User ID: ' + ${admin.getId()} + ', First name: ' + ${admin.getFirstName()} + ', Last name: '
+            + ${admin.getLastName()} + ', E-mail: ' + ${admin.getEmail()}">Id, First name, Last name, E-mail</p>
+        <p th:text="'Username: ' + ${admin.getUsername()} + ', Role: ' + ${admin.getRoles()}">Username, Role</p>
+    </div>
+    <div th:unless="${admin}">
+        <br/>
+        <p>БД не содержит данных администратора.</p>
+    </div>
+    <br/>
+    <h2>Users information:</h2>
+    <div th:if="${getUsers}">
+        <h3>Список пользователей:</h3>
+        <div th:each="user : ${getUsers}">
+            <p th:text="'User ID: ' + ${user.getId()} + ', First name: ' + ${user.getFirstName()} + ', Last name: '
+                + ${user.getLastName()} + ', E-mail: ' + ${user.getEmail()}">Id, First name, Last name, E-mail</p>
+            <p th:text="'Username: ' + ${user.getUsername()} + ', Role: ' + ${user.getRoles()}">Username, Role</p>
+            <br/>
+        </div>
+    </div>
+    <div th:unless="${getUsers}">
+        <br/>
+        <p>БД не содержит пользователей.</p>
+    </div>
+    <div>
+        <br/>
+        <br/>
+        <a th:href="@{/admin/newuser}">Создать пользователя</a>
+        <br/>
+        <a th:href="@{/admin/deleteuser}">Удалить пользователя</a>
+        <br/>
+        <a th:href="@{/admin/edituser}">Отредактировать пользователя</a>
+        <br/>
+        <br/>
+        <a th:href="@{/}">Главная страница</a>
+        <br/>
+        <a th:href="@{/login}">Войти в аккаунт</a>
+        <br/>
+        <a th:href="@{/logout}">Выйти из аккаунта</a>
+    </div>
 </body>
 </html>
