--- a/src/main/resources/templates/delete.html
+++ b/src/main/resources/templates/delete.html
@@ -5,13 +5,15 @@
     <title>Delete user</title>
 </head>
 <body>
-<form th:method="POST" th:action="@{/deleteuser}">
-    <label for="id">Enter user id: </label>
-    <input name="id" type="text" id="id"/>
+    <h3>Delete a user:</h3>
     <br/>
-    <input type="submit" value="Delete user"/>
-</form>
-<br/>
-<a th:href="@{/}">Список пользователей</a>
+    <form th:method="POST" th:action="@{/admin/deleteuser}">
+        <label for="id">Enter user id: </label>
+        <input name="id" type="text" id="id"/>
+        <br/>
+        <input type="submit" value="Delete user"/>
+    </form>
+    <br/>
+    <a th:href="@{/admin}">Список пользователей</a>
 </body>
 </html>
