--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -5,9 +5,17 @@
     <title>Update User</title>
 </head>
 <body>
-<form th:method="POST" th:action="@{/edituser}" th:object="${updateUser}">
+<h3>Update User Information:</h3>
+<br/>
+<form th:method="POST" th:action="@{/admin/edituser}" th:object="${updateUser}">
     <label for="id">Enter id: </label>
     <input type="text" th:field="*{id}" id="id"/>
+    <br/>
+    <label for="username">Enter username: </label>
+    <input type="text" th:field="*{username}" id="username"/>
+    <br/>
+    <label for="password">Enter password: </label>
+    <input type="text" th:field="*{password}" id="password"/>
     <br/>
     <label for="firstName">Enter first name: </label>
     <input type="text" th:field="*{firstName}" id="firstName"/>
@@ -18,9 +26,12 @@
     <label for="email">Enter e-mail: </label>
     <input type="text" th:field="*{email}" id="email"/>
     <br/>
+    <label for="roleNames">Enter roles: </label>
+    <input type="text" th:field="*{roleNames}" id="roleNames"/>
+    <br/>
     <input type="submit" value="Change User">
 </form>
 <br/>
-<a th:href="@{/}">Список пользователей</a>
+<a th:href="@{/admin}">Список пользователей</a>
 </body>
 </html>
