--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>User information page</title>
+    <meta charset="UTF-8">
+    <title>User's page</title>
 </head>
 <body>
     <h2>User information:</h2>
-    <div class="container">
-        <form class="form-signin" method="post" action="/logout">
-            <button class="btn btn-primary btn-block" type="submit">Logout</button>
-        </form>
+    <br/>
+    <div th:if="${user}">
+        <p th:text="'User ID: ' + ${user.getId()} + ', First name: ' + ${user.getFirstName()} + ', Last name: '
+        + ${user.getLastName()} + ', E-mail: ' + ${user.getEmail()}">Id, First name, Last name, E-mail</p>
+        <p th:text="'Username: ' + ${user.getUsername()} + ', Role: ' + ${user.getRoles()}">Username, Role</p>
+    </div>
+    <div th:unless="${user}">
+        <p>Пользователь в БД не обнаружен!</p>
+    </div>
+    <div>
+        <br/>
+        <br/>
+        <a th:href="@{/}">Главная страница</a>
+        <br/>
+        <a th:href="@{/login}">Войти в аккаунт</a>
+        <br/>
+        <a th:href="@{/logout}">Выйти из аккаунта</a>
     </div>
 </body>
 </html>
