--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -23,8 +23,11 @@
         <label for="email">Enter e-mail: </label>
         <input type="text" th:field="*{email}" id="email"/>
         <br/>
-        <label for="roleNames">*/**Enter roles: </label>
-        <input type="text" th:field="*{roleNames}" id="roleNames"/>
+        <label>*Выберите роли:</label><br/>
+        <div th:each="role : ${allRoles}">
+            <input type="checkbox" th:value="${role.id}" th:field="*{roleIds}" th:id="${'role_' + role.id}"/>
+            <label th:for="${'role_' + role.id}" th:text="${role.roleName}">ROLE</label><br/>
+        </div>
         <br/>
         <input type="submit" value="Add new User">
     </form>
