--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -24,6 +24,7 @@
             <p th:text="'User ID: ' + ${user.getId()} + ', First name: ' + ${user.getFirstName()} + ', Last name: '
                 + ${user.getLastName()} + ', E-mail: ' + ${user.getEmail()}">Id, First name, Last name, E-mail</p>
             <p th:text="'Username: ' + ${user.getUsername()} + ', Role: ' + ${user.getRoles()}">Username, Role</p>
+            <a th:href="@{/admin/edituser/{id}(id=${user.getId()})}">Редактировать</a>
             <br/>
         </div>
     </div>
