all fixes are done

--- a/src/main/resources/templates/delete.html
+++ b/src/main/resources/templates/delete.html
@@ -5,7 +5,7 @@
     <title>Delete user</title>
 </head>
 <body>
-    <h3>Delete a user:</h3>
+    <h3>Delete a user by id:</h3>
     <br/>
     <form th:method="POST" th:action="@{/admin/deleteuser}">
         <label for="id">Enter user id: </label>
